edit firebase deploy command to build the jekyll project

--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,10 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "functions": {
+    "predeploy": [
+      "bundle exec jekyll build"
+    ]
   }
 }
