Changes to gemfile and config.yml for homepage content and included plugins

--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Welcome to the world of Konken
+email: andrew@konken.ca
+description: This is a starter project for a personal website to share the adventures me and my family will go on throughout our lives. Adventures on Earth. Adventures in work. Adventures in technology and code. I look forward to sharing with the world.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+url: "https://konken.ca" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: geofferiswheel
+github_username: geofferiswheel
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -44,9 +43,7 @@ plugins:
 #
 exclude:
   - .firebaserc
-  - feed.xml
   - firebase.json
-  - public/
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
